# Quantum_Shield

./: .env.example  .env.production.template  .gitattributes  .gitignore  .gitleaks.toml  .npm-install-log.txt  .pre-commit-config.yaml  .semgrepignore  .trivyignore  ARCH-007-Companion-Architecture-Review.docx  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_V2.md  CLAUDE.md  CONSOLIDATION_MANIFEST.md  CONTRIBUTING-BACKEND.md  DOMAINS.md  IMPLEMENTATION_NOTES_JWT_KEY_ROTATION.md  INTEGRATION_TESTING.md  Makefile  NAMING.md  QAV_Incident_Response_Report.docx  QAV_Testing_Strategy_Report.docx  README.md  SECURITY.md  SERVICE_CONSOLIDATION_REPORT.txt  USBVault_Architecture_Recovery_Reference.docx  USBVault_Complete_Codebase_Audit.docx  USBVault_Enterprise_Roadmap_2026.docx  USBVault_Full_Engineering_Audit.docx  USBVault_Gap_Analysis_Report.docx  USBVault_Recovery_Handoff_Phases1-3.docx  USBVault_Recovery_Status_Report.docx  USBVault_Recovery_Strategy.docx  USBVault_Security_First_Development_Roadmap.docx  USBVault_Session_Change_Report.docx  USBVault_Sprint_Plan.docx  USBVault_Sprint_Plan_V2_to_V3.docx  USBVault_Technical_Architecture.html  USBVault_Updated_Sprint_Plan.docx  USB_Companion_Bug_Report.docx  (+9 more)
.claude/: settings.json
.github/: dependabot.yml
.semgrep/: usbvault-rules.yaml
archive/: README.md
docs/: BETA_TESTING_RUNBOOK.md  DEPLOYMENT.md  FAQ.md  FUTURE_PHASES_TODO.md  HANDOFF.md  INCIDENT_RESPONSE.md  LAUNCH_CHECKLIST.md  LAUNCH_WIRING_CHECKLIST.md  ON_CALL_RUNBOOK.md  QA_QC.md  REMAINING_WORK.md  SESSION_ACCOMPLISHMENTS_2026-03-19.md  TROUBLESHOOTING.md  USB_PROVISIONING_PACKAGING.md  V4_HEADER_SPEC.md  openapi.yaml
electron-shell/: jest.config.js  package-lock.json  package.json
infrastructure/: iam-role.json  s3-policy.json
landing/: CLAUDE.md  package-lock.json  package.json
pgbouncer/: entrypoint.sh  generate-scram-verifier.sh  pgbouncer.ini  pgbouncer.prod.ini  userlist.txt
runbooks/: 01-database-recovery.md  02-key-compromise-escalation.md  03-redis-failover.md  04-api-restart-rollback.md  05-high-latency-investigation.md  06-authentication-spike.md  07-disk-space-crisis.md  08-certificate-expiration.md  09-vault-corruption.md  10-escalation-oncall.md
scripts/: backup-db.sh  backup-key-rotate.sh  build-desktop.sh  build-ffi.sh  bundle-portable-node.sh  check-coverage.sh  check-kev.sh  dead-code-analysis.sh  dead-code-ts.sh  deploy-production.sh  gate-phase1.sh  gate-phase10.sh  gate-phase11.sh  gate-phase12.sh  gate-phase2.sh  gate-phase3.sh  gate-phase4.sh  gate-phase5.sh  gate-phase6.sh  gate-phase7.sh  gate-phase8.sh  gate-phase9.sh  generate-audit-report.sh  generate-secrets.sh  healthcheck.sh  init-db.sh  integration-test.sh  migration-rollback.sh  migration-status.sh  preflight.sh  production-readiness-check.sh  reproducible-build.sh  run-all-tests.sh  run-sast.sh  security-audit.sh  setup-check.sh  setup-db.sh  setup-hooks.sh  staging-burn-in.sh  synthetic-load.sh  (+2 more)
usb-companion/: .gitignore  README.md  package-lock.json  package.json
usbvault-app/: .env.example  .env.production.example  .eslintignore  .eslintrc.json  .eslintrc.security.json  .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  FILES_CREATED.txt  IMPLEMENTATION_COMPLETE.md  INTEGRATION_MAP.html  PINNING.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  app.json  babel.config.js  eas.json  global.css  jest.config.components.js  jest.config.js  jest.setup.components.js  jest.setup.js  metro.config.js  package-lock.json  package.json  (+4 more)
usbvault-crypto/: ARCHITECTURE.md  AUDIT_REPORT_PHASE_2.md  BUILD.md  CHANGES.md  Cargo.toml  FORMAL_VERIFICATION.md  INDEX.txt  MANIFEST.md  PHASE_2_8_FFI_BUILD_MATRIX.md  PHASE_2_TESTING_SUMMARY.md  README.md  README_AUDIT.md  SECURITY_VERIFICATION_TESTS.md  TESTING.md  VERIFICATION.md  build.rs  cbindgen.toml  deny.toml  usbvault_crypto.h
usbvault-crypto/fuzz/: Cargo.toml
usbvault-crypto/fuzz/fuzz_targets/: fuzz_cipher.rs  fuzz_kdf.rs  fuzz_sharing.rs  fuzz_streaming.rs  fuzz_vault_header.rs
usbvault-crypto/src/: cipher.rs  error.rs  kdf.rs  lib.rs  memory.rs  metrics.rs  shamir.rs  sharing.rs  srp_client.rs  streaming.rs
usbvault-crypto/src/ffi/: android.rs  desktop.rs  ios.rs  mod.rs
usbvault-crypto/src/pqc/: hybrid.rs  ml_kem.rs  mod.rs
usbvault-crypto/src/vault/: header.rs  index.rs  mod.rs  tfa.rs
usbvault-crypto/tests/: ffi_integration_harness_test.rs  ffi_tests.rs  format_compatibility_tests.rs  integration_tests.rs  kdf_ad_interop_kat.rs  nist_test_vectors.rs  property_tests.rs  share_interop_kat.rs  sharing_tests.rs  srp_protocol_tests.rs  vault_lifecycle_tests.rs
(+1021 files in other folders)
