[package]
name = "usbvault-crypto"
version = "0.1.0"
edition = "2021"
description = "Quantum Armor Vault zero-knowledge cryptographic core"
license = "Proprietary"

[lib]
name = "usbvault_crypto"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# KDF
argon2 = "0.5"
# AEAD ciphers
chacha20poly1305 = "0.10"
aes-gcm-siv = "0.11"
# Key derivation & hashing
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
# X25519 key exchange for E2E sharing
x25519-dalek = { version = "2", features = ["static_secrets"] }
# Secure memory
zeroize = { version = "1", features = ["derive"] }
# Random number generation
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SRP protocol
srp = "0.7.0-rc.1"
# Big integers for SRP-6a
num-bigint = "0.4"
# Lazy static initialization
once_cell = "1"
# Error handling
thiserror = "1"
# Hex encoding
hex = "0.4"
# Base64
base64 = "0.22"
# Generic array support
generic-array = "0.14"
# Constant-time comparison
subtle = "2"
# Shamir's Secret Sharing — implemented in-house (shamir.rs) over GF(256)
# Removed `sharks` crate due to RUSTSEC-2024-0398 (biased polynomial coefficients)
# Post-Quantum Cryptography (ML-KEM-1024)
ml-kem = { version = "0.2", optional = true, features = ["std"] }

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
proptest = "1"

[features]
default = ["pqc"]
pqc = ["ml-kem"]  # Post-quantum crypto: hybrid X25519 + ML-KEM-1024
ffi = []  # FFI exports for mobile/desktop

# `guard_page_tests` is an opt-in cfg (NOT a Cargo feature) so that
# `cargo test --all-features` in CI does not run the guard-page tests, which
# use mmap/mprotect and can fail under emulation/sandboxed runners. Enable with:
#   RUSTFLAGS="--cfg guard_page_tests" cargo test memory::tests::test_guarded
# Registered here so `unexpected_cfgs` does not warn under `clippy -D warnings`.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(guard_page_tests)'] }

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
